2010-08-22  Onkar Shinde  <onkarshinde@gmail.com>

	* installer.nsi.in: Allow specifying mingw home directory via command
	line arguments when creating installer.

2010-08-17  Onkar Shinde  <onkarshinde@gmail.com>

	* src/*.c, src/*.h, src/Makefile.am: Add editable I/O listing as a tab.
	This is based on Debajit's work for memory editing. Hence copyright of
	new files stays with him. Fixes LP: #579324.

2010-06-22  Onkar Shinde  <onkarshinde@gmail.com>

	* src/*.[c,h]: Fix postal adress of FSF in file headers. Makes
	licensecheck program in Debian happy.
	* COPYING: Include exact text of license as available on FSF's website.
	Includes address change ans other minor formatting changes.
	* data/8085asm.lang: Add copyright/license information.
	* config.guess, config.sub: Update to a bit recent copy of the files.
	* Makefile.am: Do not install ChangeLog. Let distributions decide if
	it should be included in binary packages.

2010-06-20  Onkar Shinde  <onkarshinde@gmail.com>

	* po/pt_BR.po: Updated Brazilian Portuguese translation from launchpad.
	* src/gui-list-message.c: Wrap assembler messages in the table cells.
	Fixes UI problems when messages or translations are too long.
	* src/asm-listing.c: Use tab instead of space for alignment in assembler
	listing window.

2010-06-08  Onkar Shinde  <onkarshinde@gmail.com>

	* src/file-op.c, src/file-op-gio.c: Add files opened/saved to recently
	used file list. This way they show up in 'Recently Used' section of
	file chooser dialog.
	* src/interface.[c,h], src/support.[c,h]: Add copyright header since
	the files are not 'generated' for long time.
	* src/gui-list-memory.[c,h]: Allocate copyright to Debajit Biswas as
	these files were created from scratch for a new functionality.
	* src/installer.nsi.in: Clear copyright statement.

2010-06-04  Onkar Shinde  <onkarshinde@gmail.com>

	* src/interface.c: Fix icon loading on Windows by using fallback icon.
	* tools/: Remove files from initial stages of development. Not needed